--- a/Day 3/Task 6/css/style.css
+++ b/Day 3/Task 6/css/style.css
@@ -1,76 +1,117 @@
-.header
-{
-
-    position: absolute;
-    background-color: skyblue;
+body{        
+    padding-top: 80px;
+    padding-bottom: 40px;
+}
+.container{
+    width: 80%;
+    margin: 0 auto;
+}
+.fixed-header, .fixed-footer{
     width: 100%;
-    height: 400 px;
-    position: fixed;
+    position: fixed;        
+    background: #333;
+    padding: 10px 0;
+    color: #fff;
 }
-.img1
-{
-    margin-top:20px;
-    margin-left: 5px;
-    margin-bottom: 5px;
-    height: 100px;
-    width: 100px;
-}
-.img2
-{
-    padding-top: 150px;
-    padding-left: 30px;
-    padding-right: 30px;
-}
-.img4
-{
-    padding-left: 300px;
-    position: relative;
-}
-.header1
-{
+.fixed-header{
+    top: 0;
     text-align: center;
-    margin-right: 40px;
-    margin-bottom: 10px;
-
-
 }
-button
-{
-    background-color: skyblue;
-    border: 0px;
-    font-size: medium;
-    margin-left: 20px;
+.fixed-footer{
+    text-align: center;
+    bottom: 0;
+}    
+nav a{
+    color: #fff;
+    text-decoration: none;
+    padding: 7px 25px;
+    display: inline-block;
 }
-.abt
-{
-    padding-top: 150px;
-    height: 150px;
-    background-color: burlywood;
+.container p{
+    line-height: 200px;
 }
-.men
-{
-    padding-top: 150px;
-}
-.img5
-{
-        padding-right: 10px;
-        padding-left: 10px;
-        border: 5px solid;
-        height: 200px;
-        width: 200px;
-    
-    
+.login{  
+    text-align: center;
+    width: 382px;  
+    overflow: hidden;  
+    margin: auto;  
+    margin: 20 0 0 450px;  
+    padding: 80px;  
+    background: #bcc7c5;  
+    border-radius: 15px ;
 }
 
-.aboutpage
-{
-    padding-top: 150px;
-    padding-left: 50%;
+.cart{  
+    text-align: center;
+    width: 600px;  
+    overflow: hidden;  
+    margin: auto;  
+    margin: 20 0 0 450px;  
+    padding: 80px;  
+    background: #bcc7c5;  
+    border-radius: 15px ;
 }
-
-.log
-{
-    padding-top: 150px;
-    padding-left: 50%;
-    font-size: medium;
+img {
+    padding-right: 10px;
+    padding-left: 10px;
+    height: 250px;
+    width: 250px;
 }
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    text-align: center;
+    padding: 4px;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 0px 0x;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+  
+  .button1 {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #0f130f;
+  }
+  
+  .button1:hover {
+    background-color: #4CAF50;
+    color: white;
+  }
+  .row
+  {
+      padding-left: 40px;
+      padding-right: 40px;
+      background-color: antiquewhite;
+  }
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: auto;
+    text-align: center;
+    font-family: arial;
+  }
+  
+  .price {
+    color: grey;
+    font-size: 22px;
+  }
+  
+  .card button {
+    border: none;
+    outline: 0;
+    padding: 12px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+  }
+  
+  .card button:hover {
+    opacity: 0.7;
+  }
